# recense

./: .gitignore  Cargo.toml  FAQ.md  README.md  TODO.md
config/: nginx_recense_config
src/: downloader.rs  errors.rs  htmlrenderer.rs  main.rs  pins.rs  user.rs  user_archive.rs
static/: index.html  login.html  style.css
static/fonts/: NotoSans-Regular.eot  convert_font.sh
templates/: common_footer.html  common_header.html  edit_pin.html  faq.html  index.html  login.html  logo.html  pin.html  todo.html  view_pin.html
