[package]
name = "pinroar"
version = "0.1.0"
authors = ["Jon Valdés <jon@valdes.cc>"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"
argon2rs = "0.2.5"
chrono = { version = "0.4.6", features = ["serde"] }
env_logger = "0.6.1"
failure = "0.1.5"
handlebars = "1.1.0"
log = "0.4.6"
rand_pcg = "0.1.2"
serde = { version = "1.0.90", features = ["derive"]}
serde_json = "1.0.39"
sha1 = { version = "0.6.0", features = ["std"]}

